fix last column alignment in dnd grid

--- a/src/styles/sass/DashboardPage.module.scss
+++ b/src/styles/sass/DashboardPage.module.scss
@@ -17,7 +17,8 @@
   flex-direction: row;
   justify-content: center;
   div[class^='col'] {
-    margin: 1rem auto;
+    margin-top: 14px;
+    margin-bottom: 14px;
     flex-direction: column;
     justify-content: space-between;
   }
